# vcfstash

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  RELEASES.md  TEST_SUMMARY.md  VARIANT_PRESERVATION_SUMMARY.md  WIKI.md  debug_variant_counts.sh  public_caches.yaml  pyproject.toml  requirements.txt  setup.py  vcfstash  vcfstash.py
.github/workflows/: build_annotated_hail.yml  build_cache.yml  build_cache.yml   build_cache_hail.yml  ci.yml  docker-publish.yml  precompute_gnomad_bcf.yml  release.yml  wiki-sync.yml
.junie/: guidelines.md
config/: nextflow.yml  nextflow_test.yml  vep_defaults.yml
docker/: Dockerfile  Dockerfile.annotated  Dockerfile.cache  Dockerfile.cache-hail  Dockerfile.vcfcache  Dockerfile.vcfstash  Dockerfile.vep115.2_basic  Dockerfile_tests  README.md  build-annotated-cache.sh  build-cache-with-bcf.sh  build-cache.sh  docker-compose.yml  run-vcfstash.sh
docs/: BCF_STORAGE_STRATEGY.md  GNOMAD_HAIL_SETUP.md  QUICK_START.md  QUICK_TEST_COMMANDS.md  STORAGE_AND_MAINTENANCE.md
recipes/docker-annotated/: annotation.config  annotation.yaml  params.yaml
recipes/docker-cache/: annotation.yaml  params.yaml
recipes/hg38_vep115.1/: annotation.config  params.yaml
recipes/hg38_vep115_complete/: README.md  annotation.config  params.yaml
resources/: chr_add.txt
scripts/: README.md  entrypoint.sh  export_gnomad_hail.py  release.sh  release_notes_from_changelog.py  update-bcftools.sh  upload_dummy_cache.sh
scripts/local-build/: 01-generate-master-bcf.sh  02-subset-af-thresholds.sh  03-build-blueprint.sh  04-build-annotated.sh  04a-build-base-image.sh  04b-annotate-and-commit.sh  05-push-images.sh  README.md  build-and-push-final.sh
src/: annotate.py  cache.py  cli.py
src/database/: annotator.py  base.py  initializer.py  outputs.py  updater.py
src/utils/: logging.py  validation.py  workflow.py
test_db/: vep_db.bcf.info
tests/: README.md  README_TESTING.md  conftest.py  run_benchmarks_gnomad.sh  run_benchmarks_subset.sh  test_annotate.py  test_annotation.py  test_annotation_results.py  test_annotator_low_hanging.py  test_blueprint.py  test_cache.py  test_cache_add.py  test_cache_annotate.py  test_cache_init.py  test_cli_alias_and_pull.py  test_cli_helpers_low_hanging.py  test_compare.py  test_contig_mismatches.py  test_core.py  test_initializer_updater_low_hanging.py  test_integration_annotation.py  test_manifest.py  test_stash_init.ipynb  test_validation.py  test_vanilla.py  test_workflow_manager_low_hanging.py  test_zenodo_sandbox_integration.py  test_zenodo_unit.py  update_reference.py
tests/config/: annotation.config  annotation_gnomadhg19.config  annotation_test.config  annotation_test_vep.sh  env_test.config  example_annotation.config  example_params.yaml  nextflow.config  nextflow_gnomadhg19.config  nextflow_test.config  test_annotation.config  test_params.yaml  user_params.yaml
tests/data/: test_params.yml
tools/: bcftools  debug_vcf_validation.ipynb  validate_vcf_ref.sh
tools/lib/: libdeflate.so.0
vcfcache/: __init__.py  cli.py  compare.py  demo.py  manifest.py  smoke_test.py
vcfcache/database/: annotator.py  base.py  initializer.py  outputs.py  updater.py  workflow_base.py  workflow_manager.py
vcfcache/demo_data/: demo_annotation.yaml  demo_bp.bcf.csi  demo_bpext.bcf  demo_params.yaml  demo_sample.vcf.gz.csi
vcfcache/integrations/: zenodo.py
vcfcache/utils/: archive.py  completion.py  paths.py  validation.py
vcfstash/: __init__.py  cli.py
vcfstash/database/: __init__.py  annotator.py  base.py  initializer.py  outputs.py  updater.py  workflow_base.py  workflow_manager.py
vcfstash/utils/: __init__.py  logging.py  paths.py  validation.py
vcfstash/workflow/: main.nf
workflow/: annotation.config  environment.config  main.nf  nextflow.config
workflow/modules/: annotate.nf  annotate_cache.nf  (+6 more)
(+127 files in other folders)
