# pyproject.toml
[build-system]
requires = ["flit_core>=3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "vcfstash"
version = "0.1.0"
description = "Cache-based VCF annotation accelerator"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Julius Müller", email = "julius.mueller@dkfz-heidelberg.de"}
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pysam>=0.21.0"
]

[project.optional-dependencies]
parquet = [
    "pandas>=2.2.0",
    "pyarrow>=18.0.0"
]
dev = [
    "pytest>=8.3.0"
]

[project.scripts]
vcfstash = "src.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
