# pyproject.toml
[build-system]
requires = ["hatchling>=1.26", "editables>=0.3"]
build-backend = "hatchling.build"

[project]
name = "vcfstash"
version = "0.1.0"
description = "Cache-based VCF annotation accelerator"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Julius Müller", email = "julius.mueller@dkfz-heidelberg.de"}
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pysam>=0.21.0"
]

[project.optional-dependencies]
parquet = [
    "pandas>=2.2.0",
    "pyarrow>=18.0.0"
]
dev = [
    "pytest>=8.3.0"
]

[project.scripts]
vcfstash = "vcfstash.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.hatch.build]
include = [
  "vcfstash/**"
]

[tool.hatch.build.targets.wheel]
packages = ["vcfstash"]